--- a/src/index.html
+++ b/src/index.html
@@ -242,6 +242,7 @@
               </button>
             </div>
             <a
+              class="flex justify-center"
               href="https://cafebazaar.ir/app/com.bonyadvokala.www.twa"
               target="_blank"
               rel="nofollow"
